--- a/config.yml
+++ b/config.yml
@@ -1,27 +1,11 @@
+version: 2.1
 jobs:
-  test:
-    docker:
-      - image: cimg/node:<node-version>
+  build:
+    docker: 
+      - image: cimg/node:14.10.1 # the primary container, where your job's commands are run
         auth:
           username: mydockerhub-user
           password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
     steps:
-      - checkout
-      - restore_cache:
-          keys:
-            - node-deps-v1-{{ .Branch }}-{{checksum "package-lock.json"}}
-      - run:
-          name: install packages
-          command: npm ci
-      - save_cache:
-          key: node-deps-v1-{{ .Branch }}-{{checksum "package-lock.json"}}
-          paths:
-            - ~/.npm
-      - run:
-          name: Run Tests
-          command: npm run test
-
-workflows:
-  test_my_app:
-    jobs:
-      - test
+      - checkout # check out the code in the project directory
+      - run: echo "hello world" # run the `echo` command
