--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,15 @@
 version: 2.1
-orbs:
-  node: circleci/node@3.0.0
-workflows:
-  node-tests:
-    jobs:
-      - node/test
+jobs:
+  #build
+    #...
+  deploy:
+    machine:
+      enable: true
+    steps:
+      - add_ssh_keys:
+          fingerprints:
+            - "23:f7:dd:4b:be:03:bc:c7:ee:65:5a:b8:8e:4d:bb:10"
+          run:
+            name: Deploy Over add_ssh_keys
+            command: 
+              ssh $SSH_USER@$SSH_HOST "cd gridcomputing && git pull && sudo npm run startcircleci"
