--- a/config.yml
+++ b/config.yml
@@ -10,4 +10,12 @@ jobs:
           fingerprints:
             - "23:f7:dd:4b:be:03:bc:c7:ee:65:5a:b8:8e:4d:bb:10"
 
+workflows:
+  version: 2
+  build-and-deploy:
+    jobs:
+      - deploy:
+          filters:
+            branches:
+              only: developer
 
