--- a/config.yml
+++ b/config.yml
@@ -10,7 +10,7 @@ workflows:
   version: 2
   build-and-deploy:
     jobs:
-      - deploy:
+      - deploy-job:
           filters:
             branches:
               only: main
