--- a/config.yml
+++ b/config.yml
@@ -1,15 +1,16 @@
-version: 2.1
+version: 2
 
 
 jobs:
   deploy-job:
     steps:
-      - add_ssh_keys:
-          fingerprints:
-            - "SO:ME:FIN:G:ER:PR:IN:T"
+      -run:
+        name: antes
+        command:
+           echo "Hola mundo"
 
 workflows:
-  version: 2.1
+  version: 2
   build-and-deploy:
     jobs:
       - deploy-job:
