--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,25 @@
-version: 2.1
+version: 2
+
+
 jobs:
-  deploy-job:
+
+  deploy:
+    machine:
+      enable: true
     steps:
       - add_ssh_keys:
-          fingerprints:
-            - "23:f7:dd:4b:be:03:bc:c7:ee:65:5a:b8:8e:4d:bb:10"
+        fingerprints:
+           - "cf:97:96:8d:49:45:d9:91:ec:a2:c6:cc:32:8f:91:e9"
+      - run:
+          name: antes
+          command:
+            echo "Hola mundo"
 
 workflows:
   version: 2
   build-and-deploy:
     jobs:
-      - deploy-job:
+      - deploy:
           filters:
             branches:
               only: main
