--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,14 +2,15 @@ version: 2.1
 
 
 jobs:
-
+  #build:
+    #...
   deploy:
     machine:
       enable: true
     steps:
       - add_ssh_keys:
-        fingerprints:
-           - "cf:97:96:8d:49:45:d9:91:ec:a2:c6:cc:32:8f:91:e9"
+          fingerprints:
+            - "cf:97:96:8d:49:45:d9:91:ec:a2:c6:cc:32:8f:91:e9"
       - run:
           name: antes
           command:
