--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,20 @@
 version: 2.1
-
-
 jobs:
-  #build:
-    #...
-  deploy:
-    machine:
-      enable: true
+  build:
+    docker: 
+      - image: cimg/node:14.10.1 # the primary container, where your job's commands are run
+        auth:
+          username: mydockerhub-user
+          password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
     steps:
-      - add_ssh_keys:
-          fingerprints:
-            - "cf:97:96:8d:49:45:d9:91:ec:a2:c6:cc:32:8f:91:e9"
-      - run:
-          name: antes
-          command:
-            echo "Hola mundo"
+      - checkout # check out the code in the project directory
+      - run: echo "hello world" # run the `echo` command
 
 workflows:
   version: 2
   build-and-deploy:
     jobs:
-      - deploy:
+      - build:
           filters:
             branches:
               only: main
