--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 jobs:
-  build:
+  new:
     machine: 
       enable: true
     steps:
@@ -12,7 +12,7 @@ workflows:
   version: 2
   build-and-deploy:
     jobs:
-      - build:
+      - new:
           filters:
             branches:
               only: main
