--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,10 @@ jobs:
       - add_ssh_key: # check out the code in the project directory
           fingerprints:
              - "33:55:c3:5c:48:ac:10:bb:03:7b:a8:65:ca:ef:f8:14"
-      
+      - run:
+          name: Deploy Over SSH 
+          command:      
+             ssh $SSH_USER@$SSH_HOST "cd app && git pull && sudo npm run startcircleci"
 workflows:
   version: 2
   build-and-deploy:
