--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,12 +6,17 @@
 trigger:
 - master
 
-pool:
-  vmImage: 'ubuntu-latest'
+jobs:
+- deployment: Nginxs
+  displayName: NGinx
+  pool:
+    vmImage: 'Ubuntu-lates'
+  environment:
+    name: new 
+    resourceType: VirtualMachine
+  strategy:
+      runOnce:
+        deploy:
+          steps:
+          - script: echo my first deployment
 
-steps:
-- task: ArchiveFiles@2
-  inputs:
-    rootFolderOrFile: '$(build.sourcesDirectory)'
-    includeRootFolder: false
-- task: PublishBuildArtifacts@1
