--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,17 +6,12 @@
 trigger:
 - master
 
-jobs:
-- deployment: Nginxs
-  displayName: NGinx
-  pool:
-    vmImage: 'Ubuntu-lates'
-  environment:
-    name: new 
-    resourceType: VirtualMachine
-  strategy:
-      runOnce:
-        deploy:
-          steps:
-          - script: echo my first deployment
+pool:
+  vmImage: 'ubuntu-latest'
 
+steps:
+- task: ArchiveFiles@2
+  inputs:
+    rootFolderOrFile: '$(build.sourcesDirectory)'
+    includeRootFolder: false
+- task: PublishBuildArtifacts@1
