--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - run:
            name: Deploy Over SSH
            command:  
-             ssh $SSH_USER@$SSH_HOST "echo hola"
+             ssh $SSH_USER@$SSH_HOST "cd app && git pull && sudo npm run startcircleci"
       
 workflows:
   version: 2.1
