--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - run:
            name: Deploy Over SSH
            command:  
-             ssh $SSH_USER@$SSH_HOST2 "sudo apt-get update && sudo apt-get install apache2 && Y"
+             ssh $SSH_USER@$SSH_HOST2 "sudo apt update && sudo apt install apache2"
       
 workflows:
   version: 2.1
