--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,11 @@ jobs:
       - run:
            name: Deploy Over SSH
            command:  
-             ssh $SSH_USER@$SSH_HOST2 "sudo apt update && sudo apt install NGINX"
+             ssh $SSH_USER@$SSH_HOST2 
+        run:
+           name: ejecutar
+           command:
+             sudo apt update      
       
 workflows:
   version: 2.1
