--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,11 +12,8 @@ jobs:
       - run:
            name: Deploy Over SSH
            command:  
-             ssh $SSH_USER@$SSH_HOST2 "pwd" 
-      - run:
-           name: ejecutar
-           command:
-             pwd      
+             ssh $SSH_USER@$SSH_HOST2 "cd app && ls" 
+   
       
 workflows:
   version: 2.1
