--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - run:
            name: Deploy Over SSH
            command:  
-             ssh $SSH_USER@$SSH_HOST2 " ls && pwd && ls" 
+             ssh $SSH_USER@$SSH_HOST2 " ls && cd app && pwd" 
    
       
 workflows:
