--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - run:
            name: Deploy Over SSH
            command:  
-             ssh $SSH_USER@$SSH_HOST2 " ls && cd app && pwd" 
+             ssh $SSH_USER@$SSH_HOST2 " cd app && git pull && cp index.html /var/www/html" 
    
       
 workflows:
