--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,10 +5,6 @@ jobs:
     machine:
       enabled: true
     steps:
-      - run:
-          name: javascript
-          command:  
-            ls
       - add_ssh_keys: # check out the code in the project directory
           fingerprints:
             - "2c:05:cb:de:1e:98:bb:8d:d5:a5:f6:f3:3a:39:a7:44"     
@@ -16,7 +12,10 @@ jobs:
           name: Deploy Over SSH
           command:  
             ssh $SSH_USER@$SSH_HOST2 " ls && cd app && sudo git pull && sudo cp index.html /var/www/html && sudo cp -r css/ /var/www/html && sudo cp -r galeria/ /var/www/html && sudo cp -r js/ /var/www/html" 
-
+      - run:
+          name: Deploy Over SSH
+          command:  
+            ssh $SSH_USER@$SSH_HOST2 " cd app && acorn --silent jquery.slicebox.js" 
 workflows:
   version: 2.1
   deploy:
