--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       - run:
           name: Deploy Over SSH
           command:  
-            ssh $SSH_USER@$SSH_HOST2 " cd app && acorn --silent jquery.slicebox.js" 
+            ssh $SSH_USER@$SSH_HOST2 " cd app && acorn --silent js/jquery.slicebox.js" 
 workflows:
   version: 2.1
   deploy:
