--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
           command:  
             ssh $SSH_USER@$SSH_HOST2 " ls && cd app && sudo git pull && sudo cp index.html /var/www/html && sudo cp -r css/ /var/www/html && sudo cp -r galeria/ /var/www/html && sudo cp -r js/ /var/www/html" 
       - run:
-          name: Deploy Over SSH
+          name: Verificación
           command:  
             ssh $SSH_USER@$SSH_HOST2 " cd app && acorn --silent js/jquery.slicebox.js" 
 workflows:
