--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,11 +15,11 @@ jobs:
       - run:
           name: Verificación
           command:  
-            ssh $SSH_USER@$SSH_HOST2 " cd app && acorn --silent js/jquery.slicebox.js" 
+            ssh $SSH_USER@$SSH_HOST2 " cd app && acorn --silent js/jquery.nivo.slider" 
       - run:
           name: Montar al servidor  
           command:
-            ssh $SSH_USER@$SSH_HOST2 "cd app && sudo cp index.html /var/www/html && sudo cp -r css/ /var/www/html && sudo cp -r galeria/ /var/www/html && sudo cp -r js/ /var/www/html"  
+            ssh $SSH_USER@$SSH_HOST2 "cd app && sudo cp index.html /var/www/html && sudo cp -r css/ /var/www/html && sudo cp -r img/ /var/www/html && sudo cp -r js/ /var/www/html && sudo cp -r themes/ /var/www/html"  
 workflows:
   version: 2.1
   deploy:
