--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,19 +7,37 @@ jobs:
     steps:
       - add_ssh_keys: # check out the code in the project directory
           fingerprints:
-            - "f9:95:c4:b2:25:c8:8b:7f:bf:ee:dd:ac:30:73:39:5a"     
+            - "8a:0d:96:a8:ca:3e:b4:b6:6f:d7:86:8d:46:30:4e:0f"     
       - run:
           name: Deploy Over SSH
           command:  
-            ssh $SSH_USERDES@$SSH_HOSTP " cd app && sudo git pull" 
+            ssh $SSH_USERDES@$SSH_HOSTD2 " cd app && sudo git pull" 
       - run:
           name: Verificación
           command:  
-            ssh $SSH_USERDES@$SSH_HOSTP " cd app && acorn --silent js/jquery.nivo.slider.js" 
+            ssh $SSH_USERDES@$SSH_HOSTD2 " cd app && acorn --silent js/jquery.nivo.slider.js" 
       - run:
           name: Montar al servidor  
           command:
-            ssh $SSH_USERDES@$SSH_HOSTP "cd app && sudo cp index.html /var/www/html && sudo cp -r css/ /var/www/html && sudo cp -r img/ /var/www/html && sudo cp -r js/ /var/www/html && sudo cp -r themes/ /var/www/html"  
+            ssh $SSH_USERDES@$SSH_HOSTD2 "cd app && sudo cp index.html /var/www/html && sudo cp -r css/ /var/www/html && sudo cp -r img/ /var/www/html && sudo cp -r js/ /var/www/html && sudo cp -r themes/ /var/www/html"
+  Produccion:
+    machine:
+      enabled: true
+    steps:
+      - add_ssh_keys: # check out the code in the project directory
+          fingerprints:
+            - "97:b8:a8:91:6d:62:07:74:af:74:82:6f:3b:41:c2:41" 
+            - "f9:95:c4:b2:25:c8:8b:7f:bf:ee:dd:ac:30:73:39:5a"    
+      - run:
+          name: Deploy Over SSH
+          command:  
+            ssh $SSH_USERDES@$SSH_HOSTD " cd app && sudo git pull"
+            ssh $SSH_USERDES@$SSH_HOSTP " cd app && sudo git pull"  
+      - run:
+          name: Montar al servidor  
+          command:
+            ssh $SSH_USERDES@$SSH_HOSTD "cd app && sudo cp index.html /var/www/html && sudo cp -r css/ /var/www/html && sudo cp -r img/ /var/www/html && sudo cp -r js/ /var/www/html && sudo cp -r themes/ /var/www/html"               
+            ssh $SSH_USERDES@$SSH_HOSTP "cd app && sudo cp index.html /var/www/html && sudo cp -r css/ /var/www/html && sudo cp -r img/ /var/www/html && sudo cp -r js/ /var/www/html && sudo cp -r themes/ /var/www/html"
 workflows:
   version: 2.1
   deploy:
@@ -32,5 +50,11 @@ workflows:
           type: approval
           requires:
             - Desarrollo
+      - Produccion:
+          requires:
+            - Aprobacion
+          filters:
+            branches:
+              only: main
       
 
